
dist-hook:
	mkdir $(distdir)/embed
	mkdir $(distdir)/profiler
	cp $(srcdir)/profiler/sample.c $(distdir)/profiler
	cp $(srcdir)/embed/test.cs $(srcdir)/embed/teste.c $(distdir)/embed
	cp $(srcdir)/embed/test-metadata.c $(distdir)/embed
	cp $(srcdir)/embed/test-invoke.c $(srcdir)/embed/invoke.cs $(distdir)/embed
