
dist-hook:
	mkdir $(distdir)/embed
	mkdir $(distdir)/profiler
	mkdir $(distdir)/size
	cp $(srcdir)/profiler/sample.c $(distdir)/profiler
	cp $(srcdir)/embed/test.cs $(srcdir)/embed/teste.c $(distdir)/embed
	cp $(srcdir)/embed/test-metadata.c $(distdir)/embed
	cp $(srcdir)/embed/test-invoke.c $(srcdir)/embed/invoke.cs $(distdir)/embed
	cp $(srcdir)/size/sample.cs $(srcdir)/size/objectinspector.cs $(distdir)/size
	cp $(srcdir)/size/size.c $(srcdir)/size/Makefile $(srcdir)/size/README $(distdir)/size
